--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="column1">
         <img
-          src="./assets/Resume_Template_profile.jpeg"
+          src="./assets/image1.jpg"
           alt="profile"
           class="profile"
           width="200px"
@@ -80,8 +80,8 @@
       </div>
       <div class="column2">
         <div class="heading">
-          <h3><b>KAREN</b> RICHARDS</h3>
-          <p>Associate Software Developer</p>
+          <h3><b>JAYA</b>KRISHNAN</h3>
+          <p>Trainee</p>
         </div>
         <br />
         <div class="content-col2">
